# otus-smart-home

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  bors.toml  example.h  main.c  rustfmt.toml  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
grpc-smart-socket/: Cargo.toml
grpc-smart-socket/src/: lib.rs
grpc-socket-server/: Cargo.toml
grpc-socket-server/src/: main.rs
smart-home-example/: Cargo.toml
smart-home-example/src/: main.rs
smart-home-gui/: Cargo.toml
smart-home-gui/src/: api.rs  device.rs  fonts.rs  home.rs  main.rs  room.rs
smart-home-lib/: Cargo.toml  build.rs
smart-home-lib-sys/: Cargo.toml
smart-home-lib-sys/src/: lib.rs
smart-home-lib/proto/: smart_home_socket.proto
smart-home-lib/src/: error.rs  lib.rs
smart-home-lib/src/device/: hardcoded_devices.rs  mod.rs  socket.rs  thermometer.rs
smart-home-lib/src/device/socket/: grpc_smart_socket.rs
smart-home-lib/src/device/thermometer/: udp_smart_thermometer.rs
smart-home-lib/src/home/: mod.rs
smart-home-lib/src/room/: mod.rs
smart-home-web/: Cargo.toml
smart-home-web/src/: device_list.rs  error.rs  home_list.rs  main.rs  room_list.rs  types.rs
src/: error.rs  lib.rs
src/device/: hardcoded_devices.rs  hash_stuff.rs  mod.rs
src/home/: mod.rs
src/room/: hash_stuff.rs  mod.rs
udp-smart-thermometer/: Cargo.toml
udp-smart-thermometer/src/: lib.rs
udp-thermometer-server/: Cargo.toml
udp-thermometer-server/src/: main.rs
