[package]
name = "grpc-smart-socket"
version = "0.1.0"
edition = "2021"
description = "Education project for OTUS"
repository = "https://github.com/Mephistophiles/otus-smart-home"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tonic = "0.6"
prost = "0.9"
tokio = "1.15"

smart-home-lib = { path = "../smart-home-lib" }

[build-dependencies]
tonic-build = "0.6"
