[package]
name = "socket-server"
version = "0.1.0"
edition = "2021"
description = "Smart GRPC socket client"
repository = "https://github.com/Mephistophiles/otus-smart-home"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
prost = "0.9"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"
