[package]
name = "gui-client"
version = "0.1.0"
edition = "2021"
description = "Smart Home gui"
repository = "https://github.com/Mephistophiles/otus-smart-home"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
derivative = "2"
iced = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["tokio", "debug"] }
itertools = "0.10"
serde = {version = "1", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }

