[package]
name = "smart-home-lib"
version = "0.1.0"
edition = "2021"
description = "Education project for OTUS"
repository = "https://github.com/Mephistophiles/otus-smart-home"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
thiserror = "1.0.30"

[dev-dependencies]
pretty_assertions = "1.0.0"
tokio = { version = "1.15", features = ["rt-multi-thread"] }
