[package]
name = "smart-home-lib"
version = "0.1.0"
edition = "2021"
description = "Education project for OTUS"
repository = "https://github.com/Mephistophiles/otus-smart-home"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.6"
prost = "0.9"

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.6"
