[package]
name = "web-server"
version = "0.1.0"
edition = "2021"
description = "Smart Home web server"
repository = "https://github.com/Mephistophiles/otus-smart-home"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9"
log = "0.4"
serde = {version = "1", features = ["derive"]}
smart-home-lib = { path = "../smart-home-lib" }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
