[package]
name = "udp-smart-thermometer"
version = "0.1.0"
edition = "2021"
description = "Education project for OTUS"
repository = "https://github.com/Mephistophiles/otus-smart-home"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"

smart-home-lib = { path = "../smart-home-lib" }
